tests/baselines/reference/nonPrimitiveIndexingWithForIn.errors.txt
tests/cases/conformance/types/nonPrimitive/nonPrimitiveIndexingWithForIn.ts(4,19): error TS2537: Type '{}' has no matching index signature for type 'string'.


==== tests/cases/conformance/types/nonPrimitive/nonPrimitiveIndexingWithForIn.ts (1 errors) ====
    var a: object;
    
    for (var key in a) {
        var value = a[key];
                      ~~~
!!! error TS2537: Type '{}' has no matching index signature for type 'string'.
    }
    